--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -24,7 +24,7 @@
   .title {
     font-size: 25px;
     font-weight: 700;
-    color: #1a2836;
+    color: #2b547c;
     margin-bottom: 20px;
   }
   
