--- a/src/app/trade/trade.css
+++ b/src/app/trade/trade.css
@@ -29,6 +29,26 @@
     border-radius: 100%;
     animation: ripple 0.6s linear infinite;
   }
+
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.crypto {
+  margin-top: 250px;
+}
+
+.trading-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
   
   @keyframes ripple {
     0% {
