UI update home and backtest

--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -1,3 +1,8 @@
+html, body {
+  background-color: #2b547c;
+  margin: 0;
+  height: 100%;
+}
 .mainContainer {
     background-color: #2b547c;
     min-height: 100vh;
