--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -100,6 +100,15 @@ html, body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
+
+  .newsContainer {
+      background-color: #3333aa;
+      padding: 20px;
+      border-radius: 10px;
+      width: 80%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      margin-top: 20px;
+  }
   
   .loading, .error {
     text-align: center;
