--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -29,7 +29,7 @@ html, body {
   .title {
     font-size: 25px;
     font-weight: 700;
-    color: #2b547c;
+    color: #fff;
     margin-bottom: 20px;
   }
   
