--- a/src/app/trade/trade.css
+++ b/src/app/trade/trade.css
@@ -1,61 +1,24 @@
-.homeButton {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    outline: 0;
-    display: inline-flex;
-    justify-content: space-between;
-    background: #2b547c;
-    min-width: 200px;
-    border: 0;
-    border-radius: 4px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
-    box-sizing: border-box;
-    padding: 16px 20px;
-    color: #fff;
-    font-size: 12px;
-    font-weight: 600;
-    letter-spacing: 1.2px;
-    text-transform: uppercase;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  
-  .homeButton:hover {
-    opacity: .95;
-  }
-  
-  .homeButton .animation {
-    border-radius: 100%;
-    animation: ripple 0.6s linear infinite;
-  }
-
-  .flex-row {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 1rem;
-}
-
-.crypto {
-  margin-top: 250px;
-}
-
-.trading-page {
+.trading-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: flex-start;
+  gap: 1rem;
+  width: 100%;
+  max-width: 1200px; /* Adjust this value as needed */
 }
 
-  
-  @keyframes ripple {
-    0% {
-      box-shadow: 0 0 0 0 rgba(247, 247, 247, 0.1), 0 0 0 20px rgba(255, 255, 255, 0.1), 0 0 0 40px rgba(255, 255, 255, 0.1), 0 0 0 60px rgba(255, 255, 255, 0.1);
-    }
-  
-    100% {
-      box-shadow: 0 0 0 20px rgba(255, 255, 255, 0.1), 0 0 0 40px rgba(255, 255, 255, 0.1), 0 0 0 60px rgba(255, 255, 255, 0.1), 0 0 0 80px rgba(255, 255, 255, 0);
-    }
+.trading-box {
+  flex: 1;
+  min-width: 0;
+}
+
+@media (max-width: 768px) {
+  .trading-container {
+      flex-direction: column;
+      align-items: center;
   }
+
+  .trading-box {
+      width: 100%;
+  }
+}
